--- a/index.html
+++ b/index.html
@@ -22,15 +22,69 @@
                 <img src="images/Group 8425.png" alt="Girls With Food" >
             </section>
         </section>
-        <section class="second-top">
+        <section class="second-section">
             <section class="left-img">
-                <img src="" alt="">
+                <img src="images/professional.png" alt="Human">
             </section>
             <section class="right-summery">
-                <h2>About Me</h2>
-            
+                <div class="summery">
+                <h1>About Me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Assumenda, explicabo aliquam? Recusandae iste cum <br> at tempore! Totam alias digniss lor ek loremimos <br> odit similique, cum  error perferendis consequuntur <br> aliquid lorem ratione optio quam dolorum neque <br> praesentium incidunt voluptatibus rem ad <br> doloribus? Officia sint iste quisquam.  </p>
+                <button id="secbtn">Contact me</button>
+                </div>
             </section>
         </section>
+        <section class="third-section">
+            <div class="desc">
+                <h1>My Recipies</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.  Modi quod corrupt lorem ip <br> id harum, neque quo adipisicing elit. Reprehenderit sequi similique quasi ad <br> ex enim.</p>
+            </div>
+            <article class="image">
+                <div class="item">
+                    <img src="images/Project Cover.jpg" alt="">
+                    <div class="text">
+                        <h1>Recipie Title</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/Project Cover1.jpg" alt="">
+                    <div class="text">
+                        <h1>Recipie Title</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/Project Cover.png" alt="">
+                    <div class="text">
+                        <h1>Recipie Title</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim. adipisicing elit. Reprehenderit sequi similique quasi ad ex enim.</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="last-section">
+            <div class="count">
+                <div class="down-item">
+                    <h1>700k</h1>
+                    <p>Youtube Subscribers</p>
+                </div>
+                <div class="down-item">
+                    <h1>2.4m</h1>
+                    <p>Instagram Followers</p>
+                </div>
+                <div class="down-item">
+                    <h1>100k</h1>
+                    <p>Dribble Shot Like</p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div>
+                <h1><span>FOOD</span> NETWORK</h1>
+                <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
